--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "apollo-server-express": "^3.6.2"
+    "concurrently": "^5.1.0"
   }
 }
